--- a/src/app/components/buyer/new-buyer/new-buyer.component.html
+++ b/src/app/components/buyer/new-buyer/new-buyer.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button *ngIf="!isEdit" mode="md" style="color: white !important"></ion-back-button>
+      <ion-back-button *ngIf="!isEdit" style="color: white !important"></ion-back-button>
       <ion-menu-button *ngIf="isEdit" style="color: white !important"></ion-menu-button>
     </ion-buttons>
     <ion-title>
