--- a/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
+++ b/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button mode="md" style="color: white !important"></ion-back-button>
+      <ion-back-button style="color: white !important"></ion-back-button>
     </ion-buttons>
     <ion-title>
       Detalles
@@ -17,7 +17,7 @@
     <ng-container *ngIf="hasCredit; then Credit; else noCredit"></ng-container>
     <ng-template #Credit>
 
-      <ion-card mode="ios" [ngClass]="{'state-verde': credit.status === 'verde', 
+      <ion-card [ngClass]="{'state-verde': credit.status === 'verde', 
         'state-amarillo': credit.status === 'amarillo',
         'state-rojo': credit.status === 'rojo',
         'state-azul': credit.status === 'azul' }">
@@ -72,7 +72,7 @@
       </ion-card>
     </ng-template>
     <ng-template #noCredit>
-      <ion-card mode="ios">
+      <ion-card>
         <ion-card-header>
           <ion-card-title style="display: flex; align-items: center;">
             <ion-icon name="paper"></ion-icon> Solicitar Crédito
@@ -93,7 +93,7 @@
     <!-- schedule -->
     <ng-container *ngIf="hasSchedule; then Schedule; else noSchedule"></ng-container>
     <ng-template #Schedule>
-      <ion-card mode="ios" [ngClass]="{'state-verde': schedule.status === 'verde', 
+      <ion-card [ngClass]="{'state-verde': schedule.status === 'verde', 
         'state-amarillo': schedule.status === 'amarillo',
         'state-rojo': schedule.status === 'rojo',
         'state-gris': schedule.status === 'gris',
@@ -179,7 +179,7 @@
 
     </ng-template>
     <ng-template #noSchedule>
-      <ion-card mode="ios">
+      <ion-card>
         <ion-card-header>
           <ion-card-title style="display: flex; align-items: center;">
             <ion-icon name="calendar"></ion-icon> Solicitar Visita
