--- a/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
+++ b/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar translucent color="primary">
     <ion-buttons slot="start">
-      <ion-back-button mode="md" style="color: white !important"></ion-back-button>
+      <ion-back-button style="color: white !important"></ion-back-button>
     </ion-buttons>
     <ion-title>
       Eventos
