--- a/src/app/components/login/user-select/user-select.component.html
+++ b/src/app/components/login/user-select/user-select.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button mode="md" style="color: white !important"></ion-back-button>
+      <ion-back-button style="color: white !important"></ion-back-button>
     </ion-buttons>
     <ion-title>
       Selecciona Usuario
