--- a/src/global.scss
+++ b/src/global.scss
@@ -11,6 +11,7 @@
 $mdc-theme-primary: #000000; // primary color
 $mdc-theme-secondary: #F5811E; // secondary color F58634
 @import "~@angular-mdc/theme/material";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 .split-pane-md.split-pane-visible>.split-pane-side {
     max-width: 10% !important;
@@ -22,7 +23,7 @@ $mdc-theme-secondary: #F5811E; // secondary color F58634
 
 body,
 html {
-    height: 100%
+    height: 100%;
 }
 
 .space-buttons {
@@ -47,6 +48,26 @@ html {
 
 .state-azul {
     border-left: 4px solid var(--ion-color-blue);
+}
+
+.background-gris {
+    background-color: var(--ion-color-medium);
+}
+
+.background-verde {
+    background-color: var(--ion-color-success);
+}
+
+.background-amarillo {
+    background-color: var(--ion-color-warning);
+}
+
+.background-rojo {
+    background-color: var(--ion-color-danger);
+}
+
+.background-azul {
+    background-color: var(--ion-color-blue);
 }
 
 .my-contenet {
